--- a/index.html
+++ b/index.html
@@ -51,8 +51,21 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
 <div class='nested'><a href='notebooks/Data Science/Mathematics/Matrix Transformations.html' target='_blank' rel='noopener noreferrer'>- Matrix transformations</a></div>
   </details>
   <details>
-  <summary>Statistics</summary>
+  <summary>Python Libraries</summary>
+    <details>
+    <summary>Pandas</summary>
+<div class='nested'><a href='notebooks/Data Science/Python Libraries/Pandas/01 Pandas.html' target='_blank' rel='noopener noreferrer'>- 01 pandas</a></div>
+    </details>
   </details>
+  <details>
+  <summary>Statistics</summary>
+<div class='nested'><a href='notebooks/Data Science/Statistics/1. Introduction to Statistics.html' target='_blank' rel='noopener noreferrer'>- 1. introduction to statistics</a></div>
+<div class='nested'><a href='notebooks/Data Science/Statistics/2. Back to Basics.html' target='_blank' rel='noopener noreferrer'>- 2. back to basics</a></div>
+  </details>
+</details>
+<details>
+<summary>Data Science Q&A</summary>
+<div class='nested'><a href='notebooks/Data Science Q&A/01 Stats Q&A.html' target='_blank' rel='noopener noreferrer'>- 01 stats q&a</a></div>
 </details>
 <details>
 <summary>Machine Learning Projects</summary>
